--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,14 +9,21 @@
   <br>
 
 
-  <!-- <app-galeria [peliculas]="cartelera|slice:0:6"
+  <!-- <div *ngFor=" let item of populares|slice:0:3|posterDestacado:true">
+    <app-poster [pelicula]="item" [principal]="item.principal" >
+
+    </app-poster>
+  </div> -->
+
+
+  <app-galeria [peliculas]="cines|slice:0:6"
               titulo="Películas en cartelera"></app-galeria>
 
   <app-galeria [peliculas]="populares|slice:0:6"
               titulo="Populares"></app-galeria>
 
-  <app-galeria [peliculas]="popularesNinos|slice:0:6"
-              titulo="Populares entre los más pequeños"></app-galeria> -->
+  <app-galeria [peliculas]="infantiles|slice:0:6"
+              titulo="Populares entre los más pequeños"></app-galeria>
 
 
 </div>
