--- a/src/app/components/home/poster.component.html
+++ b/src/app/components/home/poster.component.html
@@ -6,13 +6,4 @@
         </p>
     </div>
 
-
-
-
-<!--
-<div [ngClass]="{'col-md-12 div-pic-1 puntero': principal ,
-    'col-sm-6 div-pic-2 puntero': !principal }" [ngStyle]="{ 'background-image': 'url( '+ ( pelicula | peliculaImagen )  +' )' }">
-  <p class="pic-titulo">
-    {{ pelicula.titulo_original }}
-  </p>
-</div> -->
+    <!-- si quito el [ngClass] no funciona el [ngStyle] -->
