--- a/src/app/components/pelicula/pelicula.component.html
+++ b/src/app/components/pelicula/pelicula.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="pelicula" class="container main-container animated fadeIn fast">
+<div *ngIf="pelicula" class="container main-container animated fadeIn ">
 
-  <h1>{{ pelicula.titulo_original }}</h1>
+  <h1 class="card-header">{{ pelicula.titulo_original }}</h1>
 
   <div class="row">
 
@@ -8,14 +8,14 @@
       <img [src]="pelicula | peliculaImagen:true" [alt]="pelicula.titulo_original" class="img-thumbnail img-fluid">
     </div>
 
-
     <div class="col-md-7">
-      <h3>Sinopsis</h3>
+
+      <h2> <span class="badge badge-dark">Sinopsis</span> </h2>
       <hr>
       <p class="text-justify">
         {{ pelicula.descripcion }}
       </p>
-      <h4>Frase celebre</h4>
+      <h3><span class="badge badge-info">Frase celebre</span> </h3>
       <p>
         {{ pelicula.frase_celebre }}
       </p>
@@ -28,13 +28,6 @@
       <button [routerLink]="['/'+regresarA, busqueda ]" type="button" class="btn btn-outline-danger">
         Regresar
       </button>
-
     </div>
-
-
-
   </div>
-
-
-
 </div>
