--- a/src/app/components/pelicula/pelicula.component.html
+++ b/src/app/components/pelicula/pelicula.component.html
@@ -25,7 +25,7 @@
         Voto promedio: <span class="badge badge-primary">{{ pelicula.vote_average }}</span>
       </p>
 
-      <button [routerLink]="['/'+regresarA, busqueda ]" type="button" class="btn btn-outline-danger">
+      <button [routerLink]="['/'+regresarA, criterio ]" type="button" class="btn btn-outline-danger">
         Regresar
       </button>
     </div>
