--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -10,10 +10,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item" routerLinkActive="active" >
-        <a class="nav-link"[routerLink]="['home']">Home</a>
+        <a class="nav-link" [routerLink]="['/home']">Home</a>
       </li>
       <li class="nav-item" routerLinkActive="active" >
-        <a class="nav-link" href="#">Buscar</a>
+        <a class="nav-link" [routerLink]="['/buscar','']">Buscar</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
